@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-12-12T00:48:09Z",
+  "timestamp" : "2022-12-13T00:51:06Z",
   "count_outdated" : 5,
   "uniques_outdated" : 5,
-  "count" : 9,
-  "uniques" : 8,
+  "count" : 11,
+  "uniques" : 9,
   "clones" : [
     {
       "timestamp": "2022-12-07T00:00:00Z",
@@ -22,6 +22,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2022-12-12T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
