@@ -1,6 +1,6 @@
 {
-  "count": 4,
-  "uniques": 3,
+  "count": 6,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2022-12-07T00:00:00Z",
@@ -11,6 +11,11 @@
       "timestamp": "2022-12-11T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-12-12T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
